# SR-Teleop-mocap

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  vcpkg.json
include/: JointData.h  MathTypes.h  MocapClient.h  SkeletonViewer.h  TeleopMapping.h
scripts/: fake_cartesian_teleop_slider.py  fake_teleop_slider.py  fanuc_bimanual_sim.py  test_m_lrmate_joint_viewer.py  test_udp_listener.py  udp_hand_open3d.py  udp_hand_viz.py  udp_wrist_to_ik.py  visualize_urdf.py  visualize_wrist_6Dpose.py  wrist_6D_ik_to_joint.py  wrist_6D_to_joint.py  wrist_teleop_ik.py
src/: BvhStreamViewer.cpp  HandMocapReceiver.cpp  HandMocapReceiver.h  HandVisualizer.cpp  HandVisualizer.h  JointData.cpp  MocapClient.cpp  SkeletonViewer.cpp  TeleopMapping.cpp  main.cpp  main_hands_udp_loop.cpp  main_hands_udp_server.cpp  main_viewer.cpp  teleop_main.cpp
urdf/: M_lrmate_with_unijoint_hand.urdf  N1_lrmate_with_unijoint_hand.urdf  N2_lrmate_with_unijoint_hand.urdf  lrmate_with_unijoint_hand.urdf  lrmate_without_hand.urdf
urdf/meshes/: unijoint_Link1.STL  unijoint_Link2.STL  unijoint_base_link.STL
